queryon: fixed Class.newInstance() call & etc.